# nalu_fake_data_generator

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: nalu_fake_data_generator.h
include/config/: nalu_fake_data_generator_config.h
include/generator/: nalu_fake_data_generator.h
include/include/: nalu_fake_data_generator.h
scripts/: build.sh  run.sh
scripts/submodules/: build_submodules.sh
src/: main.cpp
src/config/: nalu_fake_data_generator_config.cpp
src/generator/: nalu_fake_data_generator.cpp
